// Vitest Snapshot v1

exports[`TreeSelect > TreeSelect baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
  data-v-58aa6b28=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-58aa6b28=""
    filterable=""
    placeholder="请选择"
  />
</div>
`;

exports[`TreeSelect > TreeSelect collapsedVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-collapsed"
  data-v-08840e90=""
>
  <t-tree-select
    class="demo-space"
    clearable=""
    data="[object Object],[object Object]"
    data-v-08840e90=""
    mincollapsednum="1"
    multiple=""
    placeholder="请选择"
  />
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-08840e90=""
    mincollapsednum="1"
    multiple=""
    placeholder="请选择"
  >
    <template
      data-v-08840e90=""
    >
      <t-tag
        data-v-08840e90=""
      >
        更多...
      </t-tag>
    </template>
  </t-tree-select>
</div>
`;

exports[`TreeSelect > TreeSelect dvalueVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
  data-v-f3097bb8=""
>
  <t-tree-select
    data="[object Object],[object Object]"
    data-v-f3097bb8=""
    placeholder="请选择"
    value="shenzhen,guangzhou"
  />
</div>
`;

exports[`TreeSelect > TreeSelect filterableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="default"
      >
        默认
      </t-radio-button>
      <t-radio-button
        value="function"
      >
        自定义方法
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    filterable=""
    placeholder="请选择"
    style="width: 300px;"
  />
</div>
`;

exports[`TreeSelect > TreeSelect lazyVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
  data-v-7481ee4b=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-7481ee4b=""
    placeholder="请选择"
    treeprops="[object Object]"
  />
</div>
`;

exports[`TreeSelect > TreeSelect multipleVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
  data-v-766c1b67=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-766c1b67=""
    multiple=""
    placeholder="请选择"
  />
</div>
`;

exports[`TreeSelect > TreeSelect prefixVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
  data-v-10e88aae=""
>
  <t-tree-select
    data="[object Object],[object Object]"
    data-v-10e88aae=""
    placeholder="请输入"
  >
    <svg
      class="t-icon t-icon-user"
      data-v-10e88aae=""
      slot="prefixIcon"
    >
      <use
        href="#t-icon-user"
      />
    </svg>
  </t-tree-select>
</div>
`;

exports[`TreeSelect > TreeSelect propsVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
  data-v-012d09a9=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-012d09a9=""
    placeholder="请选择"
    popupprops="[object Object]"
    treeprops="[object Object]"
  />
</div>
`;

exports[`TreeSelect > TreeSelect valuedisplayVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-valuedisplay"
  data-v-75933b88=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-75933b88=""
    placeholder="请选择"
  />
  <t-tree-select
    class="tree-select-multiple"
    clearable=""
    data="[object Object],[object Object]"
    data-v-75933b88=""
    filterable=""
    multiple=""
    placeholder="请选择"
  />
</div>
`;

exports[`TreeSelect > TreeSelect valuetypeVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
  data-v-27eab264=""
>
  <t-tree-select
    clearable=""
    data="[object Object],[object Object]"
    data-v-27eab264=""
    placeholder="请选择"
    valuetype="object"
  />
  <t-tree-select
    class="tree-select-multiple"
    clearable=""
    data="[object Object],[object Object]"
    data-v-27eab264=""
    multiple=""
    placeholder="请选择"
    valuetype="object"
  />
</div>
`;
